Fix csproj filenames

--- a/OpenShock.Serialization.Flatbuffers.csproj
+++ b/OpenShock.Serialization.Flatbuffers.csproj
@@ -39,8 +39,8 @@
         <FlatSharpSchema Include="GatewayToHubMessage.fbs" />
         <FlatSharpSchema Include="HubToLocalMessage.fbs" />
         <FlatSharpSchema Include="LocalToHubMessage.fbs" />
-        <FlatSharpSchema Include="DeprecatedMessages.fbs" />
         <FlatSharpSchema Include="HubConfig.fbs" />
+        <FlatSharpSchema Include="DeprecatedV1Messages.fbs" />
     </ItemGroup>
 
 
