--- a/OpenShock.Serialization.Flatbuffers.csproj
+++ b/OpenShock.Serialization.Flatbuffers.csproj
@@ -19,8 +19,8 @@
         <PackageTags>openshock</PackageTags>
         <PackageProjectUrl>https://openshock.org</PackageProjectUrl>
         <RepositoryUrl>https://github.com/OpenShock/flatbuffers-schemas</RepositoryUrl>
-        <Version>2.0.0-preview</Version>
-        <AssemblyVersion>2.0.0-preview</AssemblyVersion>
+        <Version>2.0.0-preview.1</Version>
+        <AssemblyVersion>2.0.0</AssemblyVersion>
         <Company>OpenShock</Company>
         <RootNamespace>OpenShock.Serialization.Flatbuffers</RootNamespace>
         <AssemblyName>OpenShock.Serialization.Flatbuffers</AssemblyName>
