--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -31,8 +31,7 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Publish API
-        if: ${{ github.ref_type == 'branch' && github.event_name != 'pull_request' && github.ref_name == 'master' }}
+      - name: Build solution
         run: dotnet build OpenShock.Serialization.Flatbuffers.csproj -c Release -o ./publish
 
       - name: Upload Nuget artifacts
